--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
   <body>
     <main id="main">My ID is "main"!</main>
+    const main = document.getElementById('main');
+ 
+    main.addEventListener('click', function(event) {
+      alert('I was clicked!');
+    });
 
     <br />
 
